[gd_scene load_steps=2 format=3 uid="uid://cpause123"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausePanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PausePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PausePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Paused"
horizontal_alignment = 1

[node name="SaveStatusLabel" type="Label" parent="CenterContainer/PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "No save file found"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Resume"

[node name="SaveButton" type="Button" parent="CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Save Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Options"

[node name="MainMenuButton" type="Button" parent="CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Quit Game"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm"
initial_position = 2
size = Vector2i(400, 150)
dialog_text = "Are you sure?"

[node name="SaveDialog" type="AcceptDialog" parent="."]
title = "Saving..."
initial_position = 2
size = Vector2i(300, 100)
dialog_text = "Saving game..."
dialog_close_on_escape = false
